--- a/_teaching/2014-15-CPSC221.md
+++ b/_teaching/2014-15-CPSC221.md
@@ -4,7 +4,7 @@ collection: teaching
 type: "CPSC221: Intermediate Algorithms"
 permalink: /teaching/2014-15-CPSC221
 venue: "UBC, Department of Computer Science"
-date: 2014-15 Winter Term 1
+date: 2014-09-01
 ---
 
 Helped with marking, assignment creation, and held office hours. 
