--- a/_teaching/2016-17-CPSC313.md
+++ b/_teaching/2016-17-CPSC313.md
@@ -1,7 +1,7 @@
 ---
 title: "Undergraduate Teaching Assistant"
 collection: teaching
-type: "CPSC221: Introduction to Algorithms"
+type: "CPSC313: Computer Hardware and Operating Systems"
 venue: "UBC, Department of Computer Science"
-date: 2014-09-01
+date: 2016-09-01
 ---
