--- a/_teaching/2018-19-CPSC421.md
+++ b/_teaching/2018-19-CPSC421.md
@@ -1,7 +1,7 @@
 ---
 title: "Undergraduate Teaching Assistant"
 collection: teaching
-type: "CPSC221: Introduction to Algorithms"
+type: "CPSC421: Theory of Computation"
 venue: "UBC, Department of Computer Science"
-date: 2014-09-01
+date: 2018-09-01
 ---
