--- a/_talks/2019-03-12-talk-1.md
+++ b/_talks/2019-03-12-talk-1.md
@@ -4,11 +4,12 @@ collection: talks
 type: "Talk"
 permalink: /talks/sgd-alg-talk
 venue: "UBC Computer Science, Algorithms Seminar"
+excerpt: "[Slides](http://sikander-randhawa.github.io/files/sgd-talk)"
 date: 2019-03-12
 location: "Vancouver, BC"
 ---
 
-[Slides](http://sikander-randhawa.github.io/files/sgd-talk)
+---
 
 A talk I gave at the Algorithms Seminar at UBC outlining the main results from our paper [Tight analyses of non-smooth stochastic gradient descent](https://sikander-randhawa.github.io/publication/2018-12-13-sgd). 
 
