--- a/_talks/2019-03-12-talk-1.md
+++ b/_talks/2019-03-12-talk-1.md
@@ -4,7 +4,7 @@ collection: talks
 type: "Talk"
 permalink: /talks/sgd-alg-talk
 venue: "UBC Computer Science, Algorithms Seminar"
-excerpt: "[Slides](http://sikander-randhawa.github.io/files/sgd-talk)"
+slides: '<a href="https://sikander-randhawa.github.io/files/sgd-talk.pptm)">slides</a>'
 date: 2019-03-12
 location: "Vancouver, BC"
 ---
