--- a/_teaching/2018-19-CPSC421.md
+++ b/_teaching/2018-19-CPSC421.md
@@ -5,3 +5,5 @@ type: "CPSC421: Theory of Computation"
 venue: "UBC, Department of Computer Science"
 date: 2018-09-01
 ---
+
+I was awarded a 2018 UBC Computer Science Graduate Teaching Award for my work as a teaching assistant for this class.
