--- a/_talks/2019-03-12-talk-1.md
+++ b/_talks/2019-03-12-talk-1.md
@@ -13,4 +13,4 @@ location: "Vancouver, BC"
 
 A talk I gave at the Algorithms Seminar at UBC outlining the main results from our paper [Tight analyses of non-smooth stochastic gradient descent](https://sikander-randhawa.github.io/publication/2018-12-13-sgd). 
 
-You can download the powerpoint slides [here](http://sikander-randhawa.github.io/files/sgd-talk.pptm).
+You can download the powerpoint slides [here](http://sikander-randhawa.github.io/files/sgd-alg-talk.pptm).
