--- a/_talks/2019-03-12-talk-1.md
+++ b/_talks/2019-03-12-talk-1.md
@@ -3,10 +3,10 @@ title: "Tight analyses of non-smooth stochastic gradient descent"
 collection: talks
 type: "Talk"
 permalink: /talks/sgd-alg-talk
-venue: "UBC Computer Science, Algorithms Seminar"
-slides: '<a href="https://sikander-randhawa.github.io/files/sgd-talk.pptm)">slides</a>'
+venue: "UBC Algorithms Seminar"
+slides: '<a href="https://sikander-randhawa.github.io/files/sgd-alg-talk.pptm)">slides</a>'
 date: 2019-03-12
-location: "Vancouver, BC"
+location: "University of British Columbia"
 ---
 
 ---
