--- a/_talks/2019-04-17-talk.md
+++ b/_talks/2019-04-17-talk.md
@@ -3,10 +3,10 @@ title: "Simple and optimal high-probability bounds for strongly-convex stochasti
 collection: talks
 type: "Talk"
 permalink: /talks/sgd-bellairs
-venue: "UBC Computer Science, Algorithms Seminar"
+venue: "Bellairs Workshop on Discrete Optimization"
 slides: '<a href="https://sikander-randhawa.github.io/files/SGD-barbados-talk.pptx)">slides</a>'
 date: 2019-04-17
-location: "Holetown, Barbados"
+location: "Bellairs Institute, Holetown, Barbados"
 ---
 
 ---
