--- a/_talks/2019-06-01-talk.md
+++ b/_talks/2019-06-01-talk.md
@@ -3,10 +3,10 @@ title: "Simple and optimal high-probability bounds for strongly-convex stochasti
 collection: talks
 type: "Talk"
 permalink: /talks/sgd-non-uni-talk-ubc
-venue: "UBC Computer Science, Algorithms Seminar"
+venue: "UBC Machine Learning Symposium"
 slides: '<a href="https://sikander-randhawa.github.io/files/sgd-talk.pptm)">slides</a>'
 date: 2019-06-01
-location: "Vancouver, BC"
+location: "University of British Columbia"
 ---
 
 ---
