--- a/_talks/2019-06-28-talk.md
+++ b/_talks/2019-06-28-talk.md
@@ -3,7 +3,7 @@ title: "Tight analyses of non-smooth stochastic gradient descent"
 collection: talks
 type: "Talk"
 permalink: /talks/colt-sgd-talk-2019
-venue: "UBC Computer Science, Algorithms Seminar"
+venue: "Conference on Learning Theory (COLT'19)"
 slides: '<a href="https://sikander-randhawa.github.io/files/colt-sgd-talk-2019.pdf)">slides</a>'
 date: 2019-06-28
 location: "Phoenix, Arizona"
