--- a/_talks/2019-04-17-talk.md
+++ b/_talks/2019-04-17-talk.md
@@ -1,5 +1,5 @@
 ---
-title: "Simple and optimal high-probability bounds for strongly-convex stochastic gradient descent"
+title: "Tight analyses for non-smooth stochastic gradient descent"
 collection: talks
 type: "Talk"
 permalink: /talks/sgd-bellairs
