--- a/_talks/2019-06-28-talk.md
+++ b/_talks/2019-06-28-talk.md
@@ -1,7 +1,7 @@
 ---
 title: "Tight analyses of non-smooth stochastic gradient descent"
 collection: talks
-type: "Talk"
+type: "Talk and poster presentation"
 permalink: /talks/colt-sgd-talk-2019
 venue: "Conference on Learning Theory (COLT'19)"
 slides: '<a href="https://sikander-randhawa.github.io/files/colt-sgd-talk-2019.pdf)">slides</a>'
