--- a/_talks/2019-06-01-talk.md
+++ b/_talks/2019-06-01-talk.md
@@ -4,7 +4,7 @@ collection: talks
 type: "Talk"
 permalink: /talks/sgd-non-uni-talk-ubc
 venue: "UBC Machine Learning Symposium"
-slides: '<a href="https://sikander-randhawa.github.io/files/sgd-talk.pptm)">slides</a>'
+slides: '<a href="https://sikander-randhawa.github.io/files/non-uni-avg-talk-ubc.pdf)">slides</a>'
 date: 2019-06-01
 location: "University of British Columbia"
 ---
