--- a/_talks/2019-06-28-talk.md
+++ b/_talks/2019-06-28-talk.md
@@ -13,4 +13,9 @@ location: "Phoenix, Arizona"
 
 A talk I gave at the Conference of Learning Theory (COLT'19) outlining the main results from our paper [Tight analyses of non-smooth stochastic gradient descent](https://sikander-randhawa.github.io/publication/2018-12-13-sgd). Our poster presentation is available [here](http://sikander-randhawa.github.io/files/colt-sgd-poster.pdf).
 
-You can download the powerpoint slides [here](http://sikander-randhawa.github.io/files/colt-sgd-talk-2019.pdf).
+You can download the powerpoint slides [here](http://sikander-randhawa.github.io/files/colt-sgd-talk-2019.pdf). The conference talk can be viewed on YouTube below.
+
+
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=jm_ZkOYka1c">
+</iframe>
