--- a/_talks/2019-06-28-talk.md
+++ b/_talks/2019-06-28-talk.md
@@ -17,5 +17,5 @@ You can download the powerpoint slides [here](http://sikander-randhawa.github.io
 
 
 <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=jm_ZkOYka1c">
+src="https://www.youtube.com/embed/jm_ZkOYka1c">
 </iframe>
