--- a/_talks/2020-02-24-talk.md
+++ b/_talks/2020-02-24-talk.md
@@ -13,4 +13,4 @@ location: "University of British Columbia"
 
 A presentation I gave to encourage underrepresented undergraduate students to try their hand at research at an event hosted by the UBC Computer Science Committee on Outreach, Diversity, and Equity.
 
-You can look at the powerpoint slides [here](http://sikander-randhawa.github.io/files/code-talk.pptm).
+You can look at the powerpoint slides [here](http://sikander-randhawa.github.io/files/code-talk.pptx).
