--- a/_teaching/2014-15-CPSC221.md
+++ b/_teaching/2014-15-CPSC221.md
@@ -1,7 +1,7 @@
 ---
-title: "Undergraduate Teaching Assistant"
+title: "Undergraduate Teaching Assistant: Into to Algorithms"
 collection: teaching
-type: "CPSC221: Introduction to Algorithms"
+type: "[CPSC221: Introduction to Algorithms](https://courses.students.ubc.ca/cs/courseschedule?pname=subjarea&tname=subj-course&dept=CPSC&course=221)"
 venue: "UBC, Department of Computer Science"
 date: 2014-09-01
 ---
