--- a/_teaching/2016-17-CPSC313.md
+++ b/_teaching/2016-17-CPSC313.md
@@ -1,7 +1,7 @@
 ---
-title: "Undergraduate Teaching Assistant"
+title: "Undergraduate Teaching Assistant: Computer Hardware and Operating Systems"
 collection: teaching
-type: "CPSC313: Computer Hardware and Operating Systems"
+type: "[CPSC313: Computer Hardware and Operating Systems](https://courses.students.ubc.ca/cs/courseschedule?pname=subjarea&tname=subj-course&dept=CPSC&course=313)"
 venue: "UBC, Department of Computer Science"
 date: 2016-09-01
 ---
