--- a/_teaching/2018-19-CPSC421.md
+++ b/_teaching/2018-19-CPSC421.md
@@ -1,7 +1,7 @@
 ---
-title: "Undergraduate Teaching Assistant"
+title: "Undergraduate Teaching Assistant: Theory of Computation"
 collection: teaching
-type: "CPSC421: Theory of Computation"
+type: "[CPSC421: Theory of Computation](https://www.cs.ubc.ca/~nickhar/F18-421/)"
 venue: "UBC, Department of Computer Science"
 date: 2018-09-01
 ---
