--- a/_posts/2020-09-08-blog-post-1.md
+++ b/_posts/2020-09-08-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Three unexpected but important lessons I learned during my M.Sc'
+title: 'Three unexpected lessons I learned during my M.Sc'
 date: 2020-09-08
 permalink: /posts/2020/09/3-lessons/
 
@@ -8,17 +8,17 @@ permalink: /posts/2020/09/3-lessons/
 
 After over two and a half years, I finally completed my M.Sc program this past summer. My research was focused on some theoretical problems in the field of machine learning and it was highly technical and mathematical in nature. Many gruelling months were spent chipping away at solving some fundamental questions. The feeling of overcoming a daunting research problem using rigour, logic, intuition, and a little bit of luck was exhilirating. Overall, I had a blast and I learned a tremendous amount.
 
-Of course, as one enters a new field -- be it a new business venture or a new area of research -- it is imperative and expected that the individual pick up a significant amount of domain specific knowledge. My situation was no different. Each research problem that we worked on pushed me beyond my previous level of ability and knowledge in the field. As a result, I learned a lot of cool new math and problem solving techniques. Some of this was done formally through coursework, but the majority of things I picked up were via osmosis. By spending enough time around seasoned researchers like my supervisor, I was able to pick up on some of the techniques which he often employed to solve problems. Over time, I began adding these to my toolkit and before I knew it I was using these tools without thinking about it. But, I would have expected to slowly pick up these tools and learn about some new areas of math before I entered the M.Sc program and I do not imagine anyone would be very fascinated that I learned some things which I was supposed to learn. This post is about the *unexpected* lessons -- the things I subconsciously learned about life while I was occupied with research. 
+Of course, as one enters a new field -- be it a new business venture or a new area of research -- it is imperative and expected that the individual pick up a significant amount of domain specific knowledge. My situation was no different. Each research problem that we worked on pushed me beyond my previous level of ability and knowledge in the field. As a result, I learned a lot of cool new math and problem solving techniques. Some of this was done formally through coursework, but the majority of things I picked up were via osmosis. By spending enough time around seasoned researchers like my supervisor, I was able to absorb some of the techniques which he often employed to solve problems. Over time, I began adding these to my toolkit and before I knew it I was using these tools without thinking about it. But, I would have expected to slowly pick up these tools and learn about some new areas of math before I entered the M.Sc program and I do not imagine anyone would be very fascinated that I learned some things which I was supposed to learn. This post is about the *unexpected* lessons -- the things I subconsciously learned about life while I was occupied with research. 
 
-For the most part, these lessons boil down to **one main takeaway**. Each of the other two lessons are intimately related to the main takeaway. The main takeaway is so simple that many people may dismiss it as being obvious. It is so simple that many may wonder how it took me 26 years of existence to come to this realization. However, I believe that the simplicity of the main takeaway makes it deceptive. This deceptive quality makes it very hard to take seriously, and therefore many people will never actually be honest with themselves about this first takeaway. Alright, that is enough buildup -- lets take a look at what I have begun to learn.
+For the most part, these lessons boil down to **one main takeaway**. Each of the other two lessons are intimately related to the main takeaway. The main takeaway is so simple that many people may dismiss it as being obvious. It is so simple that many may wonder how it took me 26 years of existence to come to this realization. However, I believe that the simplicity of the main takeaway makes it deceptive. This deceptive quality makes it very hard to take seriously, and therefore many people will never actually be honest with themselves about this first takeaway. Alright, that is enough buildup -- lets take a look at what I have begun to understand.
 
 ### Lesson one: know what you want.
 
-How is it even possible for one to *not* know what they want? Well, it is not as hard as you may assume. In the modern world, people grow up  with a tremendous amount of external pressure, and over time it becomes challenging to separate your true desires from those which were formed due to the presence of this external pressure. The world has likely already tried to define for you what it wants you to become before you have anything to say. It begins with the expectations of your parents/teachers/coaches who love you and care for you deeply. However, their love can sometimes manifest in a manner that takes you further away from who you are. While these people want the best for you, sometimes they are misguided and believe that they know what and who you are better than you do. Instead of allowing you to discover and follow your own passions and desires, they put you into a box and force you to stay there using tools like authority and guilt. While all of this comes from a place of love, the end result is truly destructive -- causing you to live a life meant for someone else.
+How is it even possible for one to *not* know what they want? Well, it is not as hard as you may assume. In the modern world, people grow up  with a tremendous amount of external pressure, and over time it becomes challenging to separate your true desires from those which were formed due to the presence of this external pressure. The world has likely already tried to define for you what it wants you to become before you have anything to say. It begins with the expectations of your parents/teachers/coaches who love you and care for you deeply. While counterintuitive, their love can sometimes manifest in a manner that takes you further away from who you are. While these people want the best for you, sometimes they are misguided and believe that they know what and who you are better than you do. Instead of allowing you to discover and follow your own passions and desires, they put you into a box and force you to stay there using tools like authority and guilt. While all of this comes from a place of love, the end result is truly destructive -- causing you to live a life meant for someone else.
 
 Then, the rest of modern world begins to bombard you with television shows, advertisements, the lives of famous people, social media, news, and so much more. All of these outlets attempt to tell you what you should care about and how you should live your life: You need to make a lot of money, you need to become famous, you need career which demands the respect of others, so on and so on. Sometimes it seems that the best thing that you can do is to simply pick amongst these pre-defined options. It is difficult for anyone, let alone a child, to have a strong sense of self amidst all this noise. 
 
-A final important factor that I would like to point out (although there may be many others) is the desire for a person to feel accepted. In *any* community, an individual within that community would like to feel accepted by the others, or even better, to recieve complements from the others. If most of the people within that community also succumbed to the same external pressures as described earlier and sacrificed their own desires, goals, and priorities in order to better align themselves with the community, then they will likely try to prevent others from living the life meant for them as well. It is a vicious cycle that becomes stronger each time an individual gives up the freedom to choose their own path. 
+A final important factor that I would like to point out (although there may be many others) is the desire for a person to feel accepted. In *any* community, an individual within that community would like to feel accepted by the others, or even better, to recieve complements from the others. If most of the people within your community also succumbed to the same external pressures as described earlier and sacrificed their own desires, goals, and priorities in order to better align themselves with the community, then they will likely try to prevent you from living the life meant for you as well. It is a vicious cycle that becomes stronger each time an individual gives up the freedom to choose their own path. 
 
 So far I have highlighted how easy it is for one to mistake your true goals/passions/dreams/desires for the goals/passions/dreams of others. I think becoming aware of the influence that the rest of the world has on us is the most important first step in self discovery, since without this awareness it is impossible to separate a true desire from an imposed desire. The rest of the steps to self discovery to me are unclear, and I don't think there is a recipe which works in general. I think each person needs to be able to answer a couple of questions for themselves, but the method to arrive at the answer will be unique for each individual. Some questions which I think are important to ask yourself are: 
 
@@ -26,12 +26,12 @@ So far I have highlighted how easy it is for one to mistake your true goals/pass
 - What things bring me the most happiness? 
 - What is it that I desire from life?
 
-Given the finiteness of life and the fact that there are no do-overs, I feel that the sooner one can answer these questions, the better. Once these questions are answered, the next two lessons should be fairly straightforward to understand. I personally do not feel like I have been able to answer these questions yet, but I am at least aware that I actually do know the answers to these questions whereas in the past I **assumed** that I did. 
+Given the finiteness of life and the fact that there are no do-overs, I feel that the sooner one can answer these questions, the better. Once these questions are answered, the next two lessons should be fairly straightforward to understand. I personally do not feel like I have been able to answer these questions yet, but I am at least aware that I actually do not know the answers to these questions whereas in the past I **assumed** that I did. 
 
 
 #### How I learned this lesson.
 
-Over time I began to realize that I was not naturally drawn towards my work. It made me contemplate my innermost desires and I realized that I had been trying to impress the people that I admire and care about the most in an effort to be more like them. This desire to impress others led to me building an identity for myself that I was scared to shed as it was something I became attached to as it was a source of pride. What I failed to understand was that the reason I admired certain people was because it was obvious to me that they were naturally drawn to their work, which to me is a sign that they know what they want. 
+Over time I began to realize that I was not naturally drawn towards my work. It made me contemplate my innermost desires and I realized that I had been trying to impress the people that I admire and care about the most in an effort to be more like them. This desire to impress others led to me building an identity for myself that I was scared to shed as it was something I became attached to as it was a source of pride. What I failed to understand was that the reason I admired certain people was because it was obvious to me that they were naturally drawn to their work, which to me is a sign that they know what they want. It was not their life which I desired, but it was the clarity within which they lived that I wanted. While I understand this now, for many years I thought that I wanted to live the life of those that I admire.
 
 
 ### Lesson two: You can define your own notion of success.
@@ -56,9 +56,6 @@ When you know what you want, finding the right balance should be easy. If you wa
 I actually learned about balance just before entering the M.Sc program. In my final years of my undergraduate program, I became obssessed with math. It was a new challenge for me, and I abandoned many things which I cared about in pursuit of this new challenge. My health and fitness suffered, personal relationships were damaged, and my life in general was out of balance. 
 
 For some reason, it was easy for me to feel that something was wrong, and I was able to course correct easily. Throughout my M.Sc program, I maintained a life which was more balanced for me. It involved pursuing my hobbies and making time for friends and family *without* feeling guilt.
-
-
-
 
 
 
